<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/banner_logi"
        android:layout_width="260dp"
        android:layout_height="90dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="36dp"
        android:gravity="top"
        android:text="@string/activity_login_hello_world_wiser"
        android:textAppearance="@style/Theme.WorldWiser.LoginActivity_HelloWorld_Wiser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.126"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="348dp"
        android:layout_height="19dp"
        android:layout_marginTop="24dp"
        android:text="@string/activity_login_simple_login_needed"
        android:textAppearance="@style/Theme.WorldWiser.LoginActivity_Login_SimpleLogin_Needed"
        app:layout_constraintStart_toStartOf="@+id/banner_logi"
        app:layout_constraintTop_toBottomOf="@+id/banner_logi" />

    <EditText
        android:id="@+id/et_email_login"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_marginTop="108dp"
        android:background="@drawable/drawable_login_email_field"
        android:hint="@string/activity_login_inputEmail_Text"
        android:paddingStart="12dp"
        android:paddingTop="12dp"
        android:textAppearance="@style/Theme.WorldWiser.LoginActivity_Login_InputEmail_EditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


</androidx.constraintlayout.widget.ConstraintLayout>